--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GMaps Scraper</title>
     <!-- Add this script in the <head> section before your app's scripts -->
     <script>
       // Check for theme preference in localStorage or system preference
